<resources>
    <string name="app_name">MyHealthyFoodApp</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="category_title">Category Title</string>
    <string name="img_of_recipe">image of recipe</string>
    <string name="img_of_category">image of category</string>
    <string name="title_activity_menu_nav">MenuNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="mins">mins</string>
    <string name="get_started">Get Started</string>
    <string name="food_for_everyone">Healthy Food for Everyone</string>
    <string name="vegetarian">vegeterian</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="view_exercises">View Exercises</string>
    <string name="view_exercise">View Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="start">START</string>
    <string name="_20">20</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save">Save</string>
    <string name="get_ready">Get Ready</string>
    <string name="_5">5</string>
    <string name="workout_done">Workout Done</string>
</resources>