<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="Favorite" />
    <item
        android:id="@+id/navigation_sport"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="Workout" />

</menu>