<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tn.esprit.myhealthyfoodapp.controller.HomeActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="tn.esprit.myhealthyfoodapp.controller.ProfileActivity"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="tn.esprit.myhealthyfoodapp.controller.RecepiesActivity"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_sport"
        android:name="tn.esprit.myhealthyfoodapp.controller.ListExercisesActivity"
        android:label="Workout"
        tools:layout="@layout/activity_list_exercises" />
</navigation>